Fix minor layout issue

--- a/style/main.css
+++ b/style/main.css
@@ -565,6 +565,8 @@ table.striped tr.section td {
     line-height: 10pt;
     width: max-content;
     max-width: 150px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .marker .icon {
